--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Rock Paper Scisors</title>
   </head>
   <body>
+    <a href="./indexv2.html">Version 2 (With UI)</a>
     <script src="js/game.js" charset="utf-8"></script>
   </body>
 </html>
